Archive2/df/e7f082f3d5d330/output
main.cpp:23:3: error: static_assert failed "More than 4 arguments are not allowed"
  static_assert( function_traits<Ret>::arity <= 4,
  ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:34:5: note: in instantiation of template class 'MemberWrapper<void (Test::*)(int, int, double, float, int)>' requested here
    MemberWrapper< decltype(&Test::f) >();
    ^
1 error generated.
